@@ -62,7 +62,7 @@ public class WedBars extends JavaPlugin {
 	public static final int GEN_DIAMOND2 = 2;
 	public static final int GEN_DIAMOND3 = 4;
 	public static final int GEN_EMERALD2 = 2;
-	public static final int GEN_EMERALD3 = 4;
+	//public static final int GEN_EMERALD3 = 4;
 
 	public static final int SPAWN_PROTECTION_DISTANCE_SQUARED = 25;
 	public static final int TRAP_DISTANCE = 7;
